*** empty log message ***

--- a/admin/ChangeLog
+++ b/admin/ChangeLog
@@ -1,11 +1,15 @@
+2004-08-29  Kim F. Storm  <storm@cua.dk>
+
+	* FOR-RELEASE (Documentation): Add man/ack.texi and AUTHORS.
+
 2004-08-28  Jan Dj,Ad(Brv  <jan.h.d@swipnet.se>
 
-	* FOR-RELEASE (Indications): Removed entry about GTK and geometry,
+	* FOR-RELEASE (Indications): Remove entry about GTK and geometry,
 	(now behaves as well as other ports).
 
 2004-06-28  Jan Dj,Ad(Brv  <jan.h.d@swipnet.se>
 
-	* FOR-RELEASE: Removed entry about GTK and monochrome displays (done).
+	* FOR-RELEASE: Remove entry about GTK and monochrome displays (done).
 
 2002-06-26  Eli Zaretskii  <eliz@is.elta.co.il>
 
