--- a/lisp/gnus/ChangeLog
+++ b/lisp/gnus/ChangeLog
@@ -1,3 +1,32 @@
+2004-08-30  Juanma Barranquero  <lektu@terra.es>
+
+	* ietf-drums.el (ietf-drums-remove-whitespace): Fix character constant.
+
+	[Emacs/trunk 2003-02-18]
+
+2004-08-30  Andreas Schwab  <schwab@suse.de>
+
+	* nnlistserv.el (nnlistserv-kk-wash-article): Fix paren nesting.
+
+	* gnus-score.el (gnus-summary-increase-score): Fix format string.
+
+	[Emacs/trunk 2004-02-08]
+	
+2004-08-30  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* nnimap.el (nnimap-demule): Avoid string-as-multibyte.
+
+	[Emacs/trunk 2004-05-06]
+
+2004-08-30  Kim F. Storm  <storm@cua.dk>
+
+	* nntp.el (nntp-authinfo-file): Add :group 'nntp.
+
+	* nnimap.el (nnimap-authinfo-file, nnimap-prune-cache):
+	Add :group 'nnimap.
+
+	[Emacs/trunk 2004-06-29]
+
 2004-08-23  Reiner Steib  <Reiner.Steib@gmx.de>
 
 	* mm-decode.el (mime-display, mime-security): Fix custom-manual
