--- a/man/pgg.texi
+++ b/man/pgg.texi
@@ -4,27 +4,30 @@
 
 @set VERSION 0.1
 
+
+@copying
+This file describes the PGG.
+
+Copyright (C) 2003 Free Software Foundation, Inc.
+Copyright (C) 2001 Daiki Ueno.
+
+@quotation
+Permission is granted to copy, distribute and/or modify this document
+under the terms of the GNU Free Documentation License, Version 1.1 or
+any later version published by the Free Software Foundation; with no
+Invariant Sections, with no Front-Cover Texts, and with no Back-Cover
+Texts.  A copy of the license is included in the section entitled ``GNU
+Free Documentation License''.
+@end quotation
+@end copying
+
+@dircategory Emacs
 @direntry
 * PGG: (pgg).   Emacs interface to various PGP implementations.
 @end direntry
 
 @settitle PGG @value{VERSION}
 
-@ifinfo
-This file describes the PGG.
-
-Copyright (C) 2003 Free Software Foundation, Inc.
-Copyright (C) 2001 Daiki Ueno.
-
-Permission is granted to copy, distribute and/or modify this document
-under the terms of the GNU Free Documentation License, Version 1.1 or
-any later version published by the Free Software Foundation; with no
-Invariant Sections, with no Front-Cover Texts, and with no Back-Cover
-Texts.  A copy of the license is included in the section entitled "GNU
-Free Documentation License".
-@end ifinfo
-
-@tex
 
 @titlepage
 @title PGG
@@ -33,18 +36,9 @@ Free Documentation License".
 @page
 
 @vskip 0pt plus 1filll
-Copyright @copyright{} 2001 Daiki Ueno.
-
-Permission is granted to copy, distribute and/or modify this document
-under the terms of the GNU Free Documentation License, Version 1.1 or
-any later version published by the Free Software Foundation; with no
-Invariant Sections, with no Front-Cover Texts, and with no Back-Cover
-Texts.  A copy of the license is included in the section entitled "GNU
-Free Documentation License".
+@insertcopying
 @end titlepage
 @page
-
-@end tex
 
 @node Top
 @top PGG
