*** empty log message ***

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,12 @@
+2004-08-30  Luc Teirlinck  <teirllm@auburn.edu>
+
+	* indent.texi: Various minor changes in addition to:
+	(Indentation Commands): Correct description of `indent-relative'.
+	(Tab Stops): <TAB> is no longer bound to `tab-to-tab-stop' in Text
+	mode.  The *Tab Stops* buffer uses Overwrite Mode.
+	(Just Spaces): `untabify' converts sequences of at least two
+	spaces to tabs.
+
 2004-08-28  Eli Zaretskii  <eliz@gnu.org>
 
 	* faq.texi (Emacs for MS-DOS): Update URLs for the MS-DOS port of
